--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 
     <!-- HEADER / INTRO -->
     <div class="header-section">
-        <h1>Your Name Here</h1>
-        <p>Your Professional Title (e.g., Data Scientist | Web Developer)</p>
+        <h1>Majid Farajian</h1>
+        <p>Digital Embedded System Researcher</p>
     </div>
 
     <div class="container">
@@ -126,13 +126,18 @@
         <!-- ABOUT SECTION -->
         <section id="about">
             <h2>About</h2>
-            <p>Write a brief introduction about yourself here. What are your main interests? What is your professional focus?</p>
+            <p>Hi! I’m Majid — a digital electronics researcher, embedded systems developer, and AI enthusiast who enjoys building things that sit at the intersection of hardware and intelligent software. I’ve always been fascinated by how systems think, sense, and learn, and a big part of my journey has been turning those ideas into real, functional devices.
+                Over the years, I’ve worked on everything from low-level MCU programming and digital circuit design to neuromorphic models and deep learning applications. I love projects that combine creativity with engineering — whether it’s designing a precise BLE and UWB indoor-Localization system, implementing a hardware-efficient neural network, or teaching deep learning to graduate students.
+                I’m currently focused on memory design, in-memory computing, and intelligent hardware architectures. My broader interests include IoT systems, indoor localization systems, long-range wireless communication, and practical AI for real-world devices. When I’m not experimenting with new architectures or debugging firmware, you’ll probably find me exploring new ideas in machine learning, reading about hardware innovations, or developing side projects.
+
+</p>
         </section>
 
         <!-- BIO SECTION -->
         <section id="bio">
             <h2>Bio</h2>
-            <p>A slightly longer narrative about your background, where you are from, and your journey.</p>
+            <p>Majid Farajian, born in 1999 in Ahvaz, Iran, is a digital electronic engineer with strong experience in embedded systems, AI-focused hardware design, and indoor localization technologies. He earned his B.Sc. in Electrical Engineering – Electronics from Shahid Chamran University of Ahvaz and his M.Sc. in Digital Electronic Engineering from Shahid Beheshti University, graduating with high distinction. His master's thesis focused on object detection using spiking neural networks for automotive applications.
+                Majid has over a decade of hands-on R&D experience in electronic circuit design, firmware development, IoT systems, and positioning technologies. He previously worked as a Senior Embedded Developer at CoolTag Company, contributing to indoor positioning algorithms and unified IoT frameworks. He also serves as a Graduate Instructional Assistant for advanced AI and deep learning courses at Khajeh Nasir Toosi University of Technology (KNTU). His current interests include neuromorphic hardware, memory design, in-memory computing, long-range wireless networks, and practical machine learning for real-world devices.</p>
         </section>
 
         <!-- EDUCATION SECTION -->
