static folder + justify text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             background-color: #f9f9f9;
             color: #333;
         }
-
+        p, li {
+            text-align: justify;
+        }
         /* --- Navigation Bar --- */
         nav {
             background: #333;
@@ -144,20 +146,19 @@
         <section id="education">
             <h2>Education</h2>
             <ul>
-                <li><strong>PhD in Subject</strong> - University Name (Year)</li>
-                <li><strong>Masters in Subject</strong> - University Name (Year)</li>
-                <li><strong>Bachelors in Subject</strong> - University Name (Year)</li>
+                <li><strong>MSc in Digital Electronics</strong> - Shahid Beheshti University (Sep 2022 - Oct 2025)</li>
+                <li><strong>BSc in Electrical Engineering - Electronics </strong> - Shahid Chamran University (Sep 2017-Jan 2022)</li>
             </ul>
         </section>
 
         <!-- PUBLICATIONS SECTION -->
-        <section id="publications">
+        <!-- <section id="publications">
             <h2>Publications</h2>
             <ul>
                 <li><em>"Paper Title 1"</em>, Journal Name, 2024.</li>
                 <li><em>"Paper Title 2"</em>, Conference Proceedings, 2023.</li>
             </ul>
-        </section>
+        </section> -->
 
         <!-- HIGHLIGHTS SECTION -->
         <section id="highlights">
