fixing bug in title.

--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
             padding: 15px;
             border-radius: 5px;
         }
+        .profile-img {
+            width: 150px;        /* Size of the image */
+            height: 150px;
+            border-radius: 50%;  /* Makes it circular */
+            border: 4px solid white; /* Adds a nice border */
+            object-fit: cover;   /* Prevents the image from stretching */
+            margin-bottom: 15px; /* Space between image and text */
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3); /* Adds a shadow */
+        }
     </style>
 </head>
 <body>
@@ -120,7 +129,7 @@
     <!-- HEADER / INTRO -->
     <div class="header-section">
         <h1>Majid Farajian</h1>
-        <p>Digital Embedded System Researcher</p>
+        <H2>Digital Embedded System Researcher</h2>
     </div>
 
     <div class="container">
