--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
             margin: 0;
             font-size: 2.5rem;
         }
+        .header-section h2 {
+            color: white;
+            margin: 0;
+            font-size: 2.5rem;
+        }
         .contact-info {
             background: #e8f5e9;
             padding: 15px;
