add image path.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <!-- HEADER / INTRO -->
     <div class="header-section">
-         <img src="profile.jpg" alt="Profile Picture" class="profile-img">
+         <img src="statics/profile.jpg" alt="Profile Picture" class="profile-img">
         <h1>Majid Farajian</h1>
         <H2>Digital Embedded System Researcher</h2>
     </div>
