add <br> to text

--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
                     <div class="edu-details">
                         <h3>MSc in Digital Electronics - Shahid Beheshti University</h3>
                         <p><strong>Sep 2022 - Oct 2025</strong></p>
-                        <p>Thesis Title: Object detection based on spiking neural networks for auto-motive applications
-                            Thesis Grade: Full Marks
-                            Supervisor : Dr.Reza Ghaderi
+                        <p>Thesis Title: Object detection based on spiking neural networks for auto-motive applications<br>
+                            Thesis Grade: Full Marks<br>
+                            Supervisor : Dr.Reza Ghaderi<br>
                             Advisor : Dr.Soheila Nazari</p>
                     </div>
                 </li>
@@ -214,7 +214,7 @@
                     <div class="edu-details">
                         <h3>Bsc in Electrical Engineering - Electronics - Shahid Chamran University</h3>
                         <p><strong>Sep 2017 - Jan 2022</strong></p>
-                        <p> Final project: Implementing flight controller on ARM microcontroller
+                        <p> Final project: Implementing flight controller on ARM microcontroller<br>
                             Supervisor: Dr. Seyyed Sajjad Moosapour</p>
                     </div>
                 </li>
