--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <!-- ABOUT SECTION -->
         <section id="about">
             <h2>About</h2>
-            <p>Hi! I’m Majid — a digital electronics researcher, embedded systems developer, and AI enthusiast who enjoys building things that sit at the intersection of hardware and intelligent software. I’ve always been fascinated by how systems think, sense, and learn, and a big part of my journey has been turning those ideas into real, functional devices.
+            <p>Hi! I’m Majid &ndash a digital electronics researcher, embedded systems developer, and AI enthusiast who enjoys building things that sit at the intersection of hardware and intelligent software. I’ve always been fascinated by how systems think, sense, and learn, and a big part of my journey has been turning those ideas into real, functional devices.
                 Over the years, I’ve worked on everything from low-level MCU programming and digital circuit design to neuromorphic models and deep learning applications. I love projects that combine creativity with engineering — whether it’s designing a precise BLE and UWB indoor-Localization system, implementing a hardware-efficient neural network, or teaching deep learning to graduate students.
                 I’m currently focused on memory design, in-memory computing, and intelligent hardware architectures. My broader interests include IoT systems, indoor localization systems, long-range wireless communication, and practical AI for real-world devices. When I’m not experimenting with new architectures or debugging firmware, you’ll probably find me exploring new ideas in machine learning, reading about hardware innovations, or developing side projects.
 
@@ -200,7 +200,7 @@
                     <div class="edu-details">
                         <h3>MSc in Digital Electronics - Shahid Beheshti University</h3>
                         <p><strong>Sep 2022 - Oct 2025</strong></p>
-                        <p>Thesis Title: Object detection based on spiking neural networks for auto-motive applications<br>
+                        <p>Thesis Title: Object detection based on spiking neural networks for automotive applications<br>
                             Thesis Grade: Full Marks<br>
                             Supervisor : Dr.Reza Ghaderi<br>
                             Advisor : Dr.Soheila Nazari</p>
@@ -214,7 +214,7 @@
                     <div class="edu-details">
                         <h3>Bsc in Electrical Engineering - Electronics - Shahid Chamran University</h3>
                         <p><strong>Sep 2017 - Jan 2022</strong></p>
-                        <p> Final project: Implementing flight controller on ARM microcontroller<br>
+                        <p> Final project: Implementing quad-copter flight controller on STM32 ARM microcontroller<br>
                             Supervisor: Dr. Seyyed Sajjad Moosapour</p>
                     </div>
                 </li>
