--- a/index.html
+++ b/index.html
@@ -174,10 +174,9 @@
         <!-- ABOUT SECTION -->
         <section id="about">
             <h2>About</h2>
-            <p>Hi! I’m Majid &ndash a digital electronics researcher, embedded systems developer, and AI enthusiast who enjoys building things that sit at the intersection of hardware and intelligent software. I’ve always been fascinated by how systems think, sense, and learn, and a big part of my journey has been turning those ideas into real, functional devices.
+            <p>Hi! I’m Majid &#8209; a digital electronics researcher, embedded systems developer, and AI enthusiast who enjoys building things that sit at the intersection of hardware and intelligent software. I’ve always been fascinated by how systems think, sense, and learn, and a big part of my journey has been turning those ideas into real, functional devices.
                 Over the years, I’ve worked on everything from low-level MCU programming and digital circuit design to neuromorphic models and deep learning applications. I love projects that combine creativity with engineering — whether it’s designing a precise BLE and UWB indoor-Localization system, implementing a hardware-efficient neural network, or teaching deep learning to graduate students.
                 I’m currently focused on memory design, in-memory computing, and intelligent hardware architectures. My broader interests include IoT systems, indoor localization systems, long-range wireless communication, and practical AI for real-world devices. When I’m not experimenting with new architectures or debugging firmware, you’ll probably find me exploring new ideas in machine learning, reading about hardware innovations, or developing side projects.
-
 </p>
         </section>
 
