comment publication section

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#bio">Bio</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#publications">Publications</a></li>
+            <!-- <li><a href="#publications">Publications</a></li> -->
             <li><a href="#highlights">Highlights</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#academic-exp">Academic Exp.</a></li>
@@ -182,7 +182,7 @@
         <!-- BIO SECTION -->
         <section id="bio">
             <h2>Bio</h2>
-            <p>Majid Farajian, born in 1999 in Ahvaz, Iran, is a digital electronic engineer with strong experience in embedded systems, AI&#8209;focused hardware design, and indoor localization technologies. He earned his B.Sc. in Electrical Engineering&#8209;Electronics from Shahid Chamran University of Ahvaz and his M.Sc. in Digital Electronic Engineering from Shahid Beheshti University, graduating with high distinction. His master's thesis focused on object detection using spiking neural networks for automotive applications.
+            <p>Majid Farajian, born in 1999 in Ahvaz, Iran, is a digital electronic engineer with strong experience in embedded systems, AI&#8209;focused hardware design, and indoor localization technologies. He earned his B.Sc. in Electrical Engineering&#8209;Electronics from Shahid Chamran University of Ahvaz and his M.Sc. in Digital Electronic Engineering from Shahid Beheshti University, graduating with high distinction. His master's thesis focused on object detection using spiking neural networks for automotive applications.<br>
                 Majid has over a decade of hands-on R&D experience in electronic circuit design, firmware development, IoT systems, and positioning technologies. He previously worked as a Senior Embedded Developer at CoolTag Company, contributing to indoor positioning algorithms and unified IoT frameworks. He also serves as a Graduate Instructional Assistant for advanced AI and deep learning courses at Khajeh Nasir Toosi University of Technology (KNTU). His current interests include neuromorphic hardware, memory design, in-memory computing, long-range wireless networks, and practical machine learning for real&#8209;world devices.</p>
         </section>
 
