--- a/index.html
+++ b/index.html
@@ -182,7 +182,23 @@
             color: #333;
             font-size: 0.95rem;
         }
+        /* --- Category Headers --- */
+        .skill-category-title {
+            width: 100%;
+            font-size: 1.2rem;
+            color: #4caf50; /* Matches your theme green */
+            border-bottom: 2px solid #eee;
+            padding-bottom: 10px;
+            margin-top: 30px; /* Space above new category */
+            margin-bottom: 15px; /* Space below title */
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
 
+        /* Remove top margin for the very first category to look cleaner */
+        .skill-category-title:first-of-type {
+            margin-top: 0;
+        }
         /* --- Responsive Design for Skills --- */
         @media (max-width: 768px) {
             .skills-grid {
@@ -197,7 +213,7 @@
     <!-- NAVIGATION BAR -->
     <nav>
         <ul>
-            <li><a href="#about">About</a></li>
+            <li><a href="#about">About me</a></li>
             <li><a href="#bio">Bio</a></li>
             <li><a href="#education">Education</a></li>
             <!-- <li><a href="#publications">Publications</a></li> -->
@@ -287,63 +303,70 @@
         <!-- SKILLS SECTION -->
         <section id="skills">
             <h2>Skills</h2>
+
+            <!-- Category 1: Software & Firmware -->
+            <h3 class="skill-category-title">Software & Firmware</h3>
             <div class="skills-grid">
-                
-                <!-- Row 1 -->
-                <div class="skill-item">
-                    <img src="statics/python.png" alt="Python" class="skill-icon">
-                    <span class="skill-name">Python</span>
-                </div>
                 <div class="skill-item">
                     <img src="statics/c-plus.png" alt="C/C++" class="skill-icon">
                     <span class="skill-name">C / C++</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/python.png" alt="Python" class="skill-icon">
+                    <span class="skill-name">Python</span>
                 </div>
                 <div class="skill-item">
                     <img src="statics/stm32.png" alt="STM32" class="skill-icon">
                     <span class="skill-name">STM32 / ARM</span>
                 </div>
                 <div class="skill-item">
-                    <img src="statics/pytorch.png" alt="PyTorch" class="skill-icon">
-                    <span class="skill-name">PyTorch</span>
+                    <img src="statics/linux.png" alt="Linux" class="skill-icon">
+                    <span class="skill-name">Embedded Linux</span>
                 </div>
+            </div>
 
-                <!-- Row 2 -->
+            <!-- Category 2: Hardware & Electronics -->
+            <h3 class="skill-category-title">Hardware & Electronics</h3>
+            <div class="skills-grid">
                 <div class="skill-item">
                     <img src="statics/pcb.png" alt="PCB Design" class="skill-icon">
                     <span class="skill-name">PCB Design</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/fpga.png" alt="FPGA" class="skill-icon">
+                    <span class="skill-name">Verilog / FPGA</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/uwb.png" alt="Wireless" class="skill-icon">
+                    <span class="skill-name">UWB & BLE</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/iot.png" alt="IoT" class="skill-icon">
+                    <span class="skill-name">IoT Systems</span>
+                </div>
+            </div>
+
+            <!-- Category 3: AI & Machine Learning -->
+            <h3 class="skill-category-title">AI & Machine Learning</h3>
+            <div class="skills-grid">
+                <div class="skill-item">
+                    <img src="statics/pytorch.png" alt="PyTorch" class="skill-icon">
+                    <span class="skill-name">PyTorch</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/tensorflow.png" alt="TensorFlow" class="skill-icon">
+                    <span class="skill-name">TensorFlow</span>
                 </div>
                 <div class="skill-item">
                     <img src="statics/matlab.png" alt="MATLAB" class="skill-icon">
                     <span class="skill-name">MATLAB</span>
                 </div>
                 <div class="skill-item">
-                    <img src="statics/fpga.png" alt="Verilog/FPGA" class="skill-icon">
-                    <span class="skill-name">Verilog / FPGA</span>
-                </div>
-                <div class="skill-item">
-                    <img src="statics/iot.png" alt="IoT" class="skill-icon">
-                    <span class="skill-name">IoT Systems</span>
-                </div>
-
-                <!-- Row 3 -->
-                <div class="skill-item">
-                    <img src="statics/linux.png" alt="Linux" class="skill-icon">
-                    <span class="skill-name">Embedded Linux</span>
-                </div>
-                <div class="skill-item">
                     <img src="statics/git.png" alt="Git" class="skill-icon">
-                    <span class="skill-name">Git & Version Control</span>
+                    <span class="skill-name">Git / MLOps</span>
                 </div>
-                <div class="skill-item">
-                    <img src="statics/uwb.png" alt="UWB/BLE" class="skill-icon">
-                    <span class="skill-name">UWB & BLE</span>
-                </div>
-                <div class="skill-item">
-                    <img src="statics/tensorflow.png" alt="TensorFlow" class="skill-icon">
-                    <span class="skill-name">TensorFlow</span>
-                </div>
-
             </div>
+
         </section>
 
         <!-- ACADEMIC EXPERIENCE SECTION -->
