--- a/index.html
+++ b/index.html
@@ -305,23 +305,29 @@
             <h2>Skills</h2>
 
             <!-- Category 1: Software & Firmware -->
-            <h3 class="skill-category-title">Software & Firmware</h3>
+            <h3 class="skill-category-title">Digital Electronics</h3>
             <div class="skills-grid">
                 <div class="skill-item">
-                    <img src="statics/c-plus.png" alt="C/C++" class="skill-icon">
-                    <span class="skill-name">C / C++</span>
+                    <img src="statics/FPGA.JPG" alt="FPGA" class="skill-icon">
+                    <span class="skill-name">VHDL/Verilog</span>
                 </div>
                 <div class="skill-item">
-                    <img src="statics/python.png" alt="Python" class="skill-icon">
-                    <span class="skill-name">Python</span>
+                    <img src="statics/Cadence.png" alt="Cadence" class="skill-icon">
+                    <span class="skill-name">Virtuoso</span>
                 </div>
                 <div class="skill-item">
-                    <img src="statics/stm32.png" alt="STM32" class="skill-icon">
-                    <span class="skill-name">STM32 / ARM</span>
+                    <img src="statics/HSPICE.jfif" alt="HSPICE" class="skill-icon">
+                    <span class="skill-name">HSPICE</span>
                 </div>
                 <div class="skill-item">
                     <img src="statics/linux.png" alt="Linux" class="skill-icon">
-                    <span class="skill-name">Embedded Linux</span>
+                    <span class="skill-name">Altium Designer</span>
+                </div>
+            </div>
+            <div class="skills-grid">
+                <div class="skill-item">
+                    <img src="statics/Vivado.jpg" alt="vivado" class="skill-icon">
+                    <span class="skill-name">Xillinx Vivado</span>
                 </div>
             </div>
 
