--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <section id="skills">
             <h2>Skills</h2>
 
-            <!-- Category 1: Software & Firmware -->
+            <!-- Category 1: Digital Electronics -->
             <h3 class="skill-category-title">Digital Electronics</h3>
             <div class="skills-grid">
                 <div class="skill-item">
@@ -320,7 +320,7 @@
                     <span class="skill-name">HSPICE</span>
                 </div>
                 <div class="skill-item">
-                    <img src="statics/linux.png" alt="Linux" class="skill-icon">
+                    <img src="statics/Altium.png" alt="Altium" class="skill-icon">
                     <span class="skill-name">Altium Designer</span>
                 </div>
             </div>
@@ -331,27 +331,44 @@
                 </div>
             </div>
 
-            <!-- Category 2: Hardware & Electronics -->
-            <h3 class="skill-category-title">Hardware & Electronics</h3>
+            <!-- Category 2:Programming -->
+            <h3 class="skill-category-title">Programming</h3>
             <div class="skills-grid">
                 <div class="skill-item">
-                    <img src="statics/pcb.png" alt="PCB Design" class="skill-icon">
-                    <span class="skill-name">PCB Design</span>
+                    <img src="statics/python.png" alt="Python" class="skill-icon">
+                    <span class="skill-name">Python</span>
                 </div>
                 <div class="skill-item">
-                    <img src="statics/fpga.png" alt="FPGA" class="skill-icon">
-                    <span class="skill-name">Verilog / FPGA</span>
+                    <img src="statics/C.JPG" alt="CPP" class="skill-icon">
+                    <span class="skill-name">C / C++</span>
                 </div>
                 <div class="skill-item">
-                    <img src="statics/uwb.png" alt="Wireless" class="skill-icon">
-                    <span class="skill-name">UWB & BLE</span>
+                    <img src="statics/matlab.png" alt="MATLAB" class="skill-icon">
+                    <span class="skill-name">MATLAB</span>
                 </div>
                 <div class="skill-item">
-                    <img src="statics/iot.png" alt="IoT" class="skill-icon">
-                    <span class="skill-name">IoT Systems</span>
+                    <img src="statics/LaTeX.png" alt="LaTeX" class="skill-icon">
+                    <span class="skill-name">LaTeX</span>
                 </div>
             </div>
-
+            <div class="skills-grid">
+                <div class="skill-item">
+                    <img src="statics/linux.png" alt="Linux" class="skill-icon">
+                    <span class="skill-name">Linux/Embedded Linux</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/qt.jfif" alt="QT" class="skill-icon">
+                    <span class="skill-name">Qt / PyQt</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/django.png" alt="django" class="skill-icon">
+                    <span class="skill-name">Django</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/networkplus.png" alt="networkplus" class="skill-icon">
+                    <span class="skill-name">network+</span>
+                </div>
+            </div>
             <!-- Category 3: AI & Machine Learning -->
             <h3 class="skill-category-title">AI & Machine Learning</h3>
             <div class="skills-grid">
