--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
             <p>Hi! I&#39;m Majid &#8209; a digital electronics researcher, embedded systems developer, and AI enthusiast who enjoys building things that sit at the intersection of hardware and intelligent software. I&#39;ve always been fascinated by how systems think, sense, and learn, and a big part of my journey has been turning those ideas into real, functional devices.<br>
                 Over the years, I&#39;ve worked on everything from low&#8209;level MCU programming and digital circuit design to neuromorphic models and deep learning applications. I love projects that combine creativity with engineering&#8209; whether it&#39;s designing a precise BLE and UWB indoor-Localization system, implementing a hardware-efficient neural network, or teaching deep learning to graduate students.<br>
                 I&#39;m currently focused on memory design, in&#8209;memory computing, and intelligent hardware architectures. My broader interests include IoT systems, indoor localization systems, long&#8209;range wireless communication, and practical AI for real-world devices. When I&#39;m not experimenting with new architectures or debugging firmware, you&#39;ll probably find me exploring new ideas in machine learning, reading about hardware innovations, or developing side projects.
-</p> 
-
+            </p> 
+        </section>
         <!-- BIO SECTION -->
         <section id="bio">
             <h2>Bio</h2>
@@ -370,23 +370,33 @@
                 </div>
             </div>
             <!-- Category 3: AI & Machine Learning -->
-            <h3 class="skill-category-title">AI & Machine Learning</h3>
+            <h3 class="skill-category-title">Interfaces</h3>
             <div class="skills-grid">
                 <div class="skill-item">
-                    <img src="statics/pytorch.png" alt="PyTorch" class="skill-icon">
-                    <span class="skill-name">PyTorch</span>
+                    <img src="statics/BLE.png" alt="BLE" class="skill-icon">
+                    <span class="skill-name">BLE</span>
                 </div>
                 <div class="skill-item">
-                    <img src="statics/tensorflow.png" alt="TensorFlow" class="skill-icon">
-                    <span class="skill-name">TensorFlow</span>
+                    <img src="statics/wifi.png" alt="wifi" class="skill-icon">
+                    <span class="skill-name">WiFi</span>
                 </div>
                 <div class="skill-item">
-                    <img src="statics/matlab.png" alt="MATLAB" class="skill-icon">
-                    <span class="skill-name">MATLAB</span>
+                    <img src="statics/UWB.png" alt="UWB" class="skill-icon">
+                    <span class="skill-name">UWB</span>
                 </div>
                 <div class="skill-item">
-                    <img src="statics/git.png" alt="Git" class="skill-icon">
-                    <span class="skill-name">Git / MLOps</span>
+                    <img src="statics/HID.jpg" alt="HID" class="skill-icon">
+                    <span class="skill-name">USB HID</span>
+                </div>
+            </div>
+            <div class="skills-grid">
+                <div class="skill-item">
+                    <img src="statics/gps.svg" alt="gps" class="skill-icon">
+                    <span class="skill-name">GPS/GNSS</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/LoRaWAN.png" alt="LoRaWAN" class="skill-icon">
+                    <span class="skill-name">LoRaWAN</span>
                 </div>
             </div>
 
