--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         }
 
         .skill-icon {
-            width: 50px;  /* Adjust size as needed */
+            width: 100px;  /* Adjust size as needed */
             height: 50px;
             object-fit: contain;
             margin-bottom: 10px;
@@ -357,7 +357,7 @@
                     <span class="skill-name">Linux/Embedded Linux</span>
                 </div>
                 <div class="skill-item">
-                    <img src="statics/qt.jfif" alt="QT" class="skill-icon">
+                    <img src="statics/qt.svg" alt="QT" class="skill-icon">
                     <span class="skill-name">Qt / PyQt</span>
                 </div>
                 <div class="skill-item">
@@ -422,7 +422,7 @@
             <h2>Languages</h2>
             <ul>
                 <li>English (Fluent)</li>
-                <li>Spanish (Intermediate)</li>
+                <li>Persian (Native)</li>
             </ul>
         </section>
 
