--- a/index.html
+++ b/index.html
@@ -399,6 +399,36 @@
                     <span class="skill-name">LoRaWAN</span>
                 </div>
             </div>
+            <!-- Category 4: AI & Machine Learning -->
+            <h3 class="skill-category-title">Interfaces</h3>
+            <div class="skills-grid">
+                <div class="skill-item">
+                    <img src="statics/BLE.png" alt="BLE" class="skill-icon">
+                    <span class="skill-name">BLE</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/wifi.png" alt="wifi" class="skill-icon">
+                    <span class="skill-name">WiFi</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/UWB.png" alt="UWB" class="skill-icon">
+                    <span class="skill-name">UWB</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/HID.jpg" alt="HID" class="skill-icon">
+                    <span class="skill-name">USB HID</span>
+                </div>
+            </div>
+            <div class="skills-grid">
+                <div class="skill-item">
+                    <img src="statics/gps.svg" alt="gps" class="skill-icon">
+                    <span class="skill-name">GPS/GNSS</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/LoRaWAN.png" alt="LoRaWAN" class="skill-icon">
+                    <span class="skill-name">LoRaWAN</span>
+                </div>
+            </div>
 
         </section>
 
