--- a/index.html
+++ b/index.html
@@ -428,6 +428,10 @@
                     <img src="statics/LoRaWAN.png" alt="LoRaWAN" class="skill-icon">
                     <span class="skill-name">LoRaWAN</span>
                 </div>
+                <div class="skill-item">
+                    <img src="statics/RS485.jpg" alt="RS485" class="skill-icon">
+                    <span class="skill-name">RS232/RS485</span>
+                </div>
             </div>
 
         </section>
