--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Portfolio</title>
+    <title>Majid Farajian Website</title>
     <style>
         /* --- General Styles --- */
         html {
@@ -244,12 +244,6 @@
                 I&#39;m currently focused on memory design, in&#8209;memory computing, and intelligent hardware architectures. My broader interests include IoT systems, indoor localization systems, long&#8209;range wireless communication, and practical AI for real-world devices. When I&#39;m not experimenting with new architectures or debugging firmware, you&#39;ll probably find me exploring new ideas in machine learning, reading about hardware innovations, or developing side projects.
             </p> 
         </section>
-        <!-- BIO SECTION -->
-        <section id="bio">
-            <h2>Bio</h2>
-            <p>Majid Farajian, born in 1999 in Ahvaz, Iran, is a digital electronic engineer with strong experience in embedded systems, AI&#8209;focused hardware design, and indoor localization technologies. He earned his B.Sc. in Electrical Engineering&#8209;Electronics from Shahid Chamran University of Ahvaz and his M.Sc. in Digital Electronic Engineering from Shahid Beheshti University, graduating with high distinction. His master's thesis focused on object detection using spiking neural networks for automotive applications.<br>
-                Majid has over a decade of hands-on R&D experience in electronic circuit design, firmware development, IoT systems, and positioning technologies. He previously worked as a Senior Embedded Developer at CoolTag Company, contributing to indoor positioning algorithms and unified IoT frameworks. He also serves as a Graduate Instructional Assistant for advanced AI and deep learning courses at Khajeh Nasir Toosi University of Technology (KNTU). His current interests include neuromorphic hardware, memory design, in-memory computing, long-range wireless networks, and practical machine learning for real&#8209;world devices.</p>
-        </section>
 
         <!-- EDUCATION SECTION -->
         <section id="education">
@@ -369,37 +363,7 @@
                     <span class="skill-name">network+</span>
                 </div>
             </div>
-            <!-- Category 3: AI & Machine Learning -->
-            <h3 class="skill-category-title">Interfaces</h3>
-            <div class="skills-grid">
-                <div class="skill-item">
-                    <img src="statics/BLE.png" alt="BLE" class="skill-icon">
-                    <span class="skill-name">BLE</span>
-                </div>
-                <div class="skill-item">
-                    <img src="statics/wifi.png" alt="wifi" class="skill-icon">
-                    <span class="skill-name">WiFi</span>
-                </div>
-                <div class="skill-item">
-                    <img src="statics/UWB.png" alt="UWB" class="skill-icon">
-                    <span class="skill-name">UWB</span>
-                </div>
-                <div class="skill-item">
-                    <img src="statics/HID.jpg" alt="HID" class="skill-icon">
-                    <span class="skill-name">USB HID</span>
-                </div>
-            </div>
-            <div class="skills-grid">
-                <div class="skill-item">
-                    <img src="statics/gps.svg" alt="gps" class="skill-icon">
-                    <span class="skill-name">GPS/GNSS</span>
-                </div>
-                <div class="skill-item">
-                    <img src="statics/LoRaWAN.png" alt="LoRaWAN" class="skill-icon">
-                    <span class="skill-name">LoRaWAN</span>
-                </div>
-            </div>
-            <!-- Category 4: AI & Machine Learning -->
+            <!-- Category 3: Interfaces -->
             <h3 class="skill-category-title">Interfaces</h3>
             <div class="skills-grid">
                 <div class="skill-item">
@@ -433,6 +397,36 @@
                     <span class="skill-name">RS232/RS485</span>
                 </div>
             </div>
+            <!-- Category 4: AI & Machine Learning -->
+            <h3 class="skill-category-title">AI & Machine Learning</h3>
+            <div class="skills-grid">
+                <div class="skill-item">
+                    <img src="statics/torch.png" alt="torch" class="skill-icon">
+                    <span class="skill-name">PyTorch</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/tf.png" alt="tf" class="skill-icon">
+                    <span class="skill-name">TensorFlow</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/Scikit_learn.png" alt="Scikit_learn" class="skill-icon">
+                    <span class="skill-name">Sci-kit Learn</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/OpenCV.png" alt="OpenCV" class="skill-icon">
+                    <span class="skill-name">OpenCV</span>
+                </div>
+            </div>
+            <div class="skills-grid">
+                <div class="skill-item">
+                    <img src="statics/keras.png" alt="keras" class="skill-icon">
+                    <span class="skill-name">Keras</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/snntorch.png" alt="snntorch" class="skill-icon">
+                    <span class="skill-name">snntorch</span>
+                </div>
+            </div>
 
         </section>
 
@@ -458,6 +452,12 @@
                 <li>English (Fluent)</li>
                 <li>Persian (Native)</li>
             </ul>
+        </section>
+        <!-- BIO SECTION -->
+        <section id="bio">
+            <h2>Bio</h2>
+            <p>Majid Farajian, born in 1999 in Ahvaz, Iran, is a digital electronic engineer with strong experience in embedded systems, AI&#8209;focused hardware design, and indoor localization technologies. He earned his B.Sc. in Electrical Engineering&#8209;Electronics from Shahid Chamran University of Ahvaz and his M.Sc. in Digital Electronic Engineering from Shahid Beheshti University, graduating with high distinction. His master's thesis focused on object detection using spiking neural networks for automotive applications.<br>
+                Majid has over a decade of hands-on R&D experience in electronic circuit design, firmware development, IoT systems, and positioning technologies. He previously worked as a Senior Embedded Developer at CoolTag Company, contributing to indoor positioning algorithms and unified IoT frameworks. He also serves as a Graduate Instructional Assistant for advanced AI and deep learning courses at Khajeh Nasir Toosi University of Technology (KNTU). His current interests include neuromorphic hardware, memory design, in-memory computing, long-range wireless networks, and practical machine learning for real&#8209;world devices.</p>
         </section>
 
         <!-- CERTIFICATES SECTION -->
