--- a/index.html
+++ b/index.html
@@ -424,7 +424,11 @@
                 </div>
                 <div class="skill-item">
                     <img src="statics/snntorch.png" alt="snntorch" class="skill-icon">
-                    <span class="skill-name">snntorch</span>
+                    <span class="skill-name">snnTorch</span>
+                </div>
+                <div class="skill-item">
+                    <img src="statics/Cuda.png" alt="cuda" class="skill-icon">
+                    <span class="skill-name">CUDA</span>
                 </div>
             </div>
 
